# maple-mate

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  maple-discord-bot-design.md  pyproject.toml  render.yaml
docs/: api-verification-plan.md  architecture.md  bitik-work-order.md  cicd-handoff.md  cicd-work-order.md  deploy-handoff.md  deploy-plan.md  exp-leaderboard-work-order.md  manual-sunday-handoff.md  manual-sunday-work-order.md  phase1-handoff.md  phase2-handoff.md  phase2-render-handoff.md  phase2-work-order.md  phase3-work-order.md  phase5-work-order.md  potential-handoff.md  potential-work-order.md  scale-tuning-work-order.md  starforce-expected-value-data.md  starforce-handoff.md  starforce-work-order.md  sunday-work-order.md  work-plan.md
maple_mate/: __init__.py  __main__.py  config.py  dependencies.py  main.py
scripts/: __init__.py  dump_events.py  spike_potential.py  trigger_notice.py  trigger_ops_summary.py  trigger_sunday.py
tests/: test_bitik_card.py  test_bitik_commands.py  test_bitik_service.py  test_cache_ttl.py  test_character_item.py  test_character_spec.py  test_comparison.py  test_config.py  test_cooldowns.py  test_crypto.py  test_database.py  test_equipment_level.py  test_error_mapping.py  test_expected_cost.py  test_footer.py  test_history_aggregate.py  test_history_period.py  test_history_prune.py  test_item_card.py  test_leaderboard_commands.py  test_leaderboard_image.py  test_leaderboard_job.py  test_leaderboard_service.py  test_load_simulation.py  test_manual_sunday_auth.py  (+22 more)
(+95 files in other folders)
