[project]
name = "maple-mate"
version = "0.1.0"
description = "친구 그룹용 메이플스토리 디스코드 봇 (discord.py + FastAPI 단일 프로세스)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "discord.py>=2.4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "cryptography>=42",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pillow>=10.0",
    "apscheduler>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: 실제 넥슨 API를 호출하는 테스트 (기본 비활성, `-m live`로 실행)",
]
addopts = "-m 'not live'"
